CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(GoogleUintTest)
SET(APP_NAME main)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/test/BuildTest)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/BuildSrc)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/test/BuildTest SRCS_TEST)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/BuildSrc SRCS_SRC)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ADD_EXECUTABLE(${APP_NAME} ${SRCS_SRC} ${SRCS_TEST})
TARGET_LINK_LIBRARIES(${APP_NAME} gtest pthread)
